kill chud animal loadouts (#182)
* remove Animals loadouts

* kill squackroach

* start mothroach replacement

* kill goldfish

* kill textures

* goida overflow

---------

Co-authored-by: deltanedas <@deltanedas:kde.org>

--- a/Resources/Prototypes/_EinsteinEngines/Language/Species-Specific/harpy.yml
+++ b/Resources/Prototypes/_EinsteinEngines/Language/Species-Specific/harpy.yml
@@ -4,7 +4,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
-# Language spoken by Harpies and Squackroaches.
+# Language spoken by Harpies.
 # Based on Polish, Greek, Serbian, Turkish.
 - type: language
   id: ValyrianStandard
